<resources>
    <string name="app_name">AquaMate</string>
    <string name="masuk">Masuk</string>
    <string name="message_login">Masukkan Email dan Password anda</string>
    <string name="message_register">Masukkan Username,Email dan Password anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_disini">Login disini</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="forgot_password">Lupa Kata Sandi\n</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="ambil_gambar">Ambil Gambar\n</string>
    <string name="pilih_galeri">Galeri</string>
    <string name="analisa">Analisa</string>
    <string name="result">Hasil Analisis</string>
    <string name="searchbar_hint">Masukkan Jenis Ikan yang ingin anda cari</string>
    <string name="result_detail">Detail Fish Dictionary</string>
</resources>